# snapenv-core

./: .cruft.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: rename_project.sh  template.yml
.github/workflows/: CODEOWNERS  publish.yml  rename_project.yml  test.yml
dev/: 404.html  index.html  objects.inv
dev/API-Reference/snap_package_template/: index.html
dev/API-Reference/snapenv_core/: index.html
dev/API-Reference/snapenv_core/config/: index.html
dev/API-Reference/snapenv_core/config/manager/: index.html
dev/API-Reference/snapenv_core/settings/: index.html
dev/API-Reference/snapenv_core/settings/manager/: index.html
dev/adr/0001-record-architecture-decisions/: index.html
dev/adr/0002-use-pydantic-settings/: index.html
dev/adr/adr-template/: index.html
dev/adr/summary/: index.html
dev/search/: search_index.json
dev/usage/settings/: index.html
docs/: .pages  index.md
docs/API-Reference/snap_package_template/: index.md
docs/adr/: 0002-use-pydantic-settings.md
docs/usage/: settings.md
examples/: settings_basic.py
scripts/: gen_pages.py
src/snap_package_template/: __init__.py
src/snapenv_core/config/: manager.py
src/snapenv_core/settings/: __init__.py  manager.py
tests/: __init__.py  pytest.ini  test_bootstrap.py  test_config.py  test_import.py
